Frequent Chores Controllers and swagger and data.sql update
